# writing-prototypes

./: .gitignore  BACKEND_COMPARISON.md  Home.py  README.md  app.py  archive_highlight.py  compare_backends.py  custom_llm.py  custom_llm_inference.py  custom_llm_v2.py  inference_backend.py  internals.py  llamacpp_inference.py  migration_plan.ipynb  pyproject.toml  requirements-base.txt  requirements-llamacpp.txt  requirements-transformers.txt  requirements-vllm.txt  requirements.txt  rewrite.py  simplified.py  test_llm_inference.py  test_vllm_backend.py  vllm_backend.py  vllm_inference.py
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Highlights.tsx  Landing.tsx  Layout.tsx  Rewrite.tsx  ShowInternals.tsx  TypeAssistant.tsx
pages/: 1_Rewrite.py  2_Highlights.py
