[project]
name = "writing-prototypes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "streamlit==1.40.1",
    "accelerate>=1.1.1",
    "torch>=2.5.1",
    "transformers>=4.50.0",
    "tokenizers>=0.21.0",
    "torchao>=0.9.0",
    "setuptools>=77.0.3",
    "uvicorn>=0.34.3",
]
dev = [
    "ipython>=8.32.0",
    "marimo>=0.10.6",
]
